# learngit

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  Pet.cpp  Pet.h  animation.cpp  animation.h  main.cpp
